<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text=" A:"
            android:textSize="18dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtA"
            android:layout_width="270dp"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="7dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text=" B:"
            android:textSize="18dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtB"
            android:layout_width="259dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="77dp"
            android:layout_height="75dp"
            android:text=" Result"
            android:textSize="18dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/LabC"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="..." />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but1_name"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:onClick="add_click"
            android:text="@string/But1_name" />

        <Button
            android:id="@+id/but2_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="sub_click"
            android:text="@string/But2_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but3_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="mul_click"
            android:shadowColor="#F6EEEE"
            android:text="@string/But3_name"
            android:textColor="@color/white"


            />

        <Button
            android:id="@+id/but4"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:onClick="div_click"
            android:text="@string/But4_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butPow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pow_click"
            android:text="@string/But_Pow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text=" D:"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/texF"
            android:layout_width="321dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" Result:"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/resD"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="..." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/butSin"
            android:layout_width="66dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:onClick="sin_click"
            android:text="@string/But_sin" />

        <Button
            android:id="@+id/butCos"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:onClick="cos_click"
            android:text="@string/But_cos" />

        <Button
            android:id="@+id/butTan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tan_click"
            android:text="@string/But_Tan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butSqrt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="sqrt_click"
            android:text="@string/But_Sqrt" />

    </LinearLayout>

</LinearLayout>